working image-only rev search