@@ -3,7 +3,7 @@ package com.example.lostnfound.controller;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.logging.Logger;
+import java.util.stream.Collectors;
 import com.example.lostnfound.service.user.UserService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,6 +16,7 @@ import com.example.lostnfound.dto.LoginDto;
 import com.example.lostnfound.dto.PasswordDto;
 import com.example.lostnfound.dto.PostDto;
 import com.example.lostnfound.dto.UserDto;
+import com.example.lostnfound.enums.Role;
 import com.example.lostnfound.exception.UserNotAuthenticatedException;
 import com.example.lostnfound.model.Post;
 import com.example.lostnfound.model.User;
@@ -34,7 +35,7 @@ public class UserController {
     private final UserService userService;
     private final PasswordEncoder encoder;
     private final ModelMapper modelMapper;
-    private Logger logger = Logger.getLogger(UserController.class.getName());
+
     @Autowired
     public UserController(UserService userService, PasswordEncoder encoder, ModelMapper modelMapper) {
         this.userService = userService;
@@ -44,7 +45,7 @@ public class UserController {
 
     @PostMapping("/register")
     @Operation(summary = "Register a new user", description = "Registers a new user")
-    public ResponseEntity<Object> register(@RequestBody UserDto user) {
+    public ResponseEntity<?> register(@RequestBody UserDto user) {
         try {
             User newUser = new User();
             newUser.setEmail(user.getEmail());
@@ -53,8 +54,8 @@ public class UserController {
             newUser.setDepartment(user.getDepartment());
             newUser.setAddress(user.getAddress());
             newUser.setRole(user.getRole());
-            newUser.setEmbedding(new float[3072]);
-            logger.info("New created user is: " + newUser);
+            newUser.setEmbedding(new float[512]);
+            System.out.println("New created user is: " + newUser);
             userService.register(newUser);
             return new ResponseEntity<>(modelMapper.map(newUser, UserDto.class), HttpStatus.CREATED);
         } catch (Exception e) {
@@ -64,7 +65,7 @@ public class UserController {
 
     @PostMapping("/login")
     @Operation(summary = "Login", description = "Logs in a user")
-    public ResponseEntity<Object> login(@RequestBody LoginDto user) {
+    public ResponseEntity<?> login(@RequestBody LoginDto user) {
         try {
             String mail = user.getEmail();
             String password = user.getPassword();
@@ -81,7 +82,7 @@ public class UserController {
 
     @Operation(summary = "Get user profile by id", description = "Retrieves user's profile by id")
     @GetMapping("/profile/{id}")
-    public ResponseEntity<Object> getUser(@PathVariable("id") Long id) {
+    public ResponseEntity<?> getUser(@PathVariable("id") Long id) {
         try {
             User user = userService.findById(id);
             if (user != null) {
@@ -94,12 +95,12 @@ public class UserController {
         }
     }
 
-    private ResponseEntity<Object> getUserProfileResponseResponseEntity(User user) {
+    private ResponseEntity<?> getUserProfileResponseResponseEntity(User user) {
         try {
             List<Post> posts = userService.findPostsByUserId(user.getUserId());
             List<PostDto> postDtos = posts.stream()
                     .map(post -> modelMapper.map(post, PostDto.class))
-                    .toList();
+                    .collect(Collectors.toList());
             System.out.println("User embed " + Arrays.toString(user.getEmbedding()));
             UserProfileResponse response = new UserProfileResponse(modelMapper.map(user, UserDto.class), postDtos);
             return new ResponseEntity<>(response, HttpStatus.OK);
@@ -110,7 +111,7 @@ public class UserController {
 
     @Operation(summary = "Get user profile", description = "Retrieves authenticated user's profile and posts")
     @GetMapping("/profile")
-    public ResponseEntity<Object> profileUser() {
+    public ResponseEntity<?> profileUser() {
         try {
             Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
             if (principal instanceof UserDetails userDetails) {
@@ -129,7 +130,7 @@ public class UserController {
 
     @PutMapping("/updateProfile")
     @Operation(summary = "Update user profile", description = "Updates user profile")
-    public ResponseEntity<Object> updateProfile(@RequestBody UserDto user) {
+    public ResponseEntity<?> updateProfile(@RequestBody UserDto user) {
         try {
 
             userService.update(user);
@@ -141,7 +142,7 @@ public class UserController {
 
     @Operation(summary = "Validate JWT token", description = "Validates JWT token")
     @GetMapping("/validate")
-    public ResponseEntity<Object> validate() {
+    public ResponseEntity<?> validate() {
         try{
             return new ResponseEntity<>("Token is valid", HttpStatus.OK);
         } catch (Exception e){
@@ -152,7 +153,7 @@ public class UserController {
 
     @GetMapping("/myId")
     @Operation(summary = "Get user id", description = "Retrieves user id")
-    public ResponseEntity<Object> getMyId() {
+    public ResponseEntity<?> getMyId() {
         try {
             User user = userService.getCurrentUser();
             return new ResponseEntity<>(user.getUserId(), HttpStatus.OK);
